superwordpress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp
spec:
  ingressClassName: nginx
  rules:
  - host: superwordpress.k8s.local
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
